更新输入数据的处理

--- a/Application/Home/View/Category/addCategory.html
+++ b/Application/Home/View/Category/addCategory.html
@@ -58,7 +58,7 @@ function checkSubmit() {
         dataType: "text",
         success: function(re) {
             if ('success' != re) {
-                // layer.alert(re);
+                layer.alert(re);
             } else {
                 location.href = "{:U('Index/index')}";
             }   
