更新漏洞处理

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -4,7 +4,7 @@
 <!--info start-->
 <div style="font-size:18px;">
     <pre>
-    <p>这里是『{:C('APP_PROJECT')}』项目 API 说明文档！本文档主要是基于后台开发与手机 App 开发者的沟通桥梁。然而，我们有野马一样的狂奔、狼的敏锐，Just Coding 务必团结一致。。。</p>
+    <p>这里是『{:C('APP_PROJECT')}』项目 API 说明文档！本文档主要是基于后台开发与手机 App 的沟通桥梁。So Just Coding and Chatting。。。</p>
     <h5><span style="font-size:26px;" class="glyphicon glyphicon-grain" aria-hidden="true"></span>技术支持：</h5><p>ThinkPHP3.2.2、BootStrap3.3.4、Mysql 等</p>
     </pre>
 </div>
