--- a/Application/Home/View/Interface/addInterface.html
+++ b/Application/Home/View/Interface/addInterface.html
@@ -9,7 +9,7 @@
                 <div class="form-group has-error">
                     <div class="input-group">
                         <div class="input-group-addon">接口编号</div>
-                        <input type="text" class="form-control" name="num" placeholder="接口编号" required="required">
+                        <input type="text" class="form-control" name="num" placeholder="接口编号" required="required" value="{$code}">
                     </div>
                 </div>
                 <div class="form-group has-error">
@@ -21,7 +21,7 @@
                 <div class="form-group has-error">
                     <div class="input-group">
                         <div class="input-group-addon">请求地址</div>
-                        <input type="text" class="form-control" name="url" placeholder="请求地址" required="required">
+                        <input type="text" class="form-control" name="url" placeholder="请求地址" required="required" value="http://yafeng.dadazu.com/wap.php/">
                     </div>
                 </div>
                 <div class="form-group">
