--- a/Application/Home/View/Interface/returnCode.html
+++ b/Application/Home/View/Interface/returnCode.html
@@ -39,14 +39,14 @@
             <tbody id="return_value">
                 <tr>
                     <td> </td>
-                    <td>SUCCUSS</td>
-                    <td>请求成功</td>
+                    <td>errcode</td>
+                    <td>系统返回码，00001 代表成功，00002 代表失败</td>
                     <td> </td>
                 </tr>
                 <tr>
                     <td> </td>
-                    <td>ERROR</td>
-                    <td>请求失败</td>
+                    <td>errinfo</td>
+                    <td>系统返回信息</td>
                     <td> </td>
                 </tr>
             </tbody>
@@ -55,9 +55,9 @@
     <div style="background:#ffffff;padding:20px;">
         <h4 class="textshadow"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> 后记</h4>
         <pre style="background:honeydew">
-        如果您发现有任何臭虫 [ bug ] 或者建议等，请及时联系我们。<br/>
-        QQ：908379294<br/>
-        Email：chenyuanqi90s@qq.com
+        如果您对该 API 接口有更好的建议，请及时联系我们。<br/>
+        &copy;打打族<br/>
+        <a href='http://www.dadazu.com' target="_blank" title='打打族'>http://www.dadazu.com</a>
         </pre>
     </div>
 </div>
