--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -12,6 +12,11 @@
     <script src="[!JS]html5shiv.min.js"></script>
     <script src="[!JS]respond.min.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <style>
+    .col-md-3{width:23%}
+    </style>
+    <![endif]-->
     <link href="[!CSS]style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -21,7 +26,7 @@
             <!--左侧导航start-->
             <div class="col-md-3" style="position:relative;background:#f5f5f5;padding:10px;height:100%;border-right:#ddd 1px solid;overflow-y:auto">
                 <div style="height:50px;font-size:30px;line-height:50px;">
-                    <a style="color:#000000;text-shadow:1px 0px 1px #666;text-decoration: none" href="__ROOT__"> <span class="glyphicon glyphicon-random" aria-hidden="true" style="width:40px;"></span>&nbsp; <span style="position: relative;top:-3px;">{:C('APP_PROJECT')}项目 API<span style="font-size:12px;position:relative;top:-13px;">&nbsp;{:C('APP_VERSION')}</span>
+                    <a style="color:#000000;text-shadow:1px 0px 1px #666;text-decoration: none" href="__ROOT__/api.php"> <span class="glyphicon glyphicon-random" aria-hidden="true" style="width:40px;"></span>&nbsp; <span style="position: relative;top:-3px;">{:C('APP_PROJECT')}项目 API<span style="font-size:12px;position:relative;top:-13px;">&nbsp;{:C('APP_VERSION')}</span>
                     </a>
                     </span>
                 </div>
